# ISM-project

./: .gitignore  CMakeLists.txt  README.md
include/: benchmark.h  kernels.h  utils.h
src/: benchmark.c  kernels.c  main.c  utils.c
